--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "deroterAD",
+  "name": "deroter-cae",
   "version": "1.0.0",
   "description": "A Mpvue project",
   "author": "arronf2e <191446367@qq.com>",
